# LPACAF

./: .gitignore  AULA 04.gh  Introdução ao Python.md  LPACAF - Aula 02.ipynb  LPACAF - Aula 03.ipynb  README.md  aula 03 2018.py  instalacaoPythonGrass.md  instalacao_ghpython  latexexample.tex  mkdocs.yml  numeros_gabi.py  pixi.toml  pyproject.toml  teste jupyter.ipynb  testeMPL3d.py  testeNumpy.py
Aula_01/: .~lock.Aula 01 - introdução a programação 2018.2 .pptx#  hello.py
Aula_02/: LPACAF-Aula_02.ipynb  LPACAF-Aula_02_py2.ipynb  LPACAF-Aula_02_py3.ipynb  calculoDeEscadas.py  escada_aula_02.py  escadas.md
Aula_03/: LPACAF-Aula_03.ipynb  aula 03 2018.py  aula_03_2018_1.py
Aula_04/: AULA_04.gh  AULA_04_FINAL.gh  aula_04_2018_1_FINAL.gh  exemploFor.py  exemplos_for_e_while.py
Aula_05/: exemplo_rhino_pilar_tubular.py  exemplo_rhino_pilar_tubular_extrude.py  exemplo_rhino_pilar_tubular_pipe.py
Aula_06/: Aula_06_sequencia_de_pilares.gh  Aula_06_sequencia_de_pilares_base.gh  Aula_06_sequencia_de_pilares_final.gh  exemplo_didatico_revisao_do_loop_for.py  exemplo_rhino_pilotis_tubulares_pipe.py
Aula_07/: AULA_07.gh  AULA_07_base.gh  AULA_07_final.gh  AULA_07_final_2020.gh  SGP - trelica v3.gh  aula_07_final.py
Aula_08/: Aula_08 base.gh  Aula_08 finalRG.gh  Aula_08 finalRG_Plane.gh  Aula_08 teste.gh  Aula_08.gh  Aula_08_2018_1.gh  Aula_08_2018_1_parte_2.gh  Aula_08_final.gh  Aula_08_finalRG.gh  Aula_8_teste_flatlist.gh  Malha_regular.py  forDuplo.py  malhas_de_pilares_grasshopper.gh
Aula_09/: Aula_09.gh  Aula_09_base.gh  Aula_09_baseFinal_2019.1.gh  Aula_09_final.gh  (+3 more)
(+39 files in other folders)
