[tool.poetry]
name = "fpacaf"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocs-jupyter = "^0.24.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pixi add python=3.13 mkdocs mkdocs-material mkdocs-jupyter